tutorial/level_1/M3_application_deployment/5_templates_kustomize/manifests/kustomize/base/service.yaml
# Kustomize base Service -- exposes the kustomize-app Deployment.
apiVersion: v1
kind: Service
metadata:
  name: kustomize-app
  labels:
    app: kustomize-app
    tutorial-level: "1"
    tutorial-module: "M3"
spec:
  selector:
    app: kustomize-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
