tutorial/level_1/M3_application_deployment/5_templates_kustomize/manifests/kustomize/base/route.yaml
# Kustomize base Route -- OpenShift Route for the kustomize-app.
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kustomize-app
  labels:
    app: kustomize-app
    tutorial-level: "1"
    tutorial-module: "M3"
spec:
  to:
    kind: Service
    name: kustomize-app
  port:
    targetPort: 8080
